--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,18 +35,20 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/NE20_User_Monitor
 endorsed.classpath=
 excludes=
-file.reference.jcommon-1.0.23.jar=lib\\jfreechart-1.0.19\\lib\\jcommon-1.0.23.jar
-file.reference.jfreechart-1.0.19-swt.jar=lib\\jfreechart-1.0.19\\lib\\jfreechart-1.0.19-swt.jar
-file.reference.jfreechart-1.0.19.jar=lib\\jfreechart-1.0.19\\lib\\jfreechart-1.0.19.jar
-file.reference.snmp4j-2.6.2.jar=lib\\snmp4j-2.6.2\\dist\\snmp4j-2.6.2.jar
+file.reference.jcommon-1.0.23.jar=lib/jfreechart-1.0.19/lib/jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19-swt.jar=lib/jfreechart-1.0.19/lib/jfreechart-1.0.19-swt.jar
+file.reference.jfreechart-1.0.19.jar=lib/jfreechart-1.0.19/lib/jfreechart-1.0.19.jar
+file.reference.snmp4j-2.6.2.jar=lib/snmp4j-2.6.2.jar
 includes=**
-jar.compress=false
+jar.archive.disabled=${jnlp.enabled}
+jar.compress=true
+jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${libs.absolutelayout.classpath}:\
+    ${file.reference.snmp4j-2.6.2.jar}:\
     ${file.reference.jfreechart-1.0.19-swt.jar}:\
     ${file.reference.jfreechart-1.0.19.jar}:\
     ${file.reference.jcommon-1.0.23.jar}:\
-    ${file.reference.snmp4j-2.6.2.jar}
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -82,7 +84,24 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=NE20_User_Monitor
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=ne20.user.monitor.Monitor
+# Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
+manifest.custom.application.library.allowable.codebase=
+# Optional override of default Caller-Allowable-Codebase attribute identifying the domains from which JavaScript code can make calls to your RIA without security prompts.
+manifest.custom.caller.allowable.codebase=
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
