--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jlink=true
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\Suporte10\\AppData\\Roaming\\NetBeans\\9.0\\build.properties
+user.properties.file=/home/edsongley/.netbeans/8.2/build.properties
