--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,6 +39,7 @@ file.reference.jcommon-1.0.23.jar=lib/jfreechart-1.0.19/lib/jcommon-1.0.23.jar
 file.reference.jfreechart-1.0.19-swt.jar=lib/jfreechart-1.0.19/lib/jfreechart-1.0.19-swt.jar
 file.reference.jfreechart-1.0.19.jar=lib/jfreechart-1.0.19/lib/jfreechart-1.0.19.jar
 file.reference.snmp4j-2.6.2.jar=lib/snmp4j-2.6.2.jar
+file.reference.yamlbeans-1.0.jar=lib/yamlbeans-1.0.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=true
@@ -48,7 +49,9 @@ javac.classpath=\
     ${file.reference.jfreechart-1.0.19-swt.jar}:\
     ${file.reference.jfreechart-1.0.19.jar}:\
     ${file.reference.jcommon-1.0.23.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${libs.CopyLibs-2.classpath}:\
+    ${file.reference.yamlbeans-1.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -57,8 +60,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=10
-javac.target=10
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
